RESOLVED FIXED132069
[New Multicolumn] Crasher when clearing out a flow thread in multicolumn layout.
https://bugs.webkit.org/show_bug.cgi?id=132069
Summary [New Multicolumn] Crasher when clearing out a flow thread in multicolumn layout.
Dave Hyatt
Reported 2014-04-23 11:14:35 PDT
We need to delete the line box tree to stop the crashes.
Attachments
Patch (4.21 KB, patch)
2014-04-23 11:38 PDT, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2014-04-23 11:38:04 PDT
Dean Jackson
Comment 2 2014-04-23 11:48:38 PDT
Comment on attachment 229998 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=229998&action=review > Source/WebCore/ChangeLog:8 > + This is imported from a patch Morten did for Blink, but I had to change it a fair We typically link to the Blink commit id.
Dave Hyatt
Comment 3 2014-04-23 11:56:12 PDT
Landed in r167718.
Note You need to log in before you can comment on or make changes to this bug.