[New Multicolumn] Crasher when clearing out a flow thread in multicolumn layout. https://bugs.webkit.org/show_bug.cgi?id=132069

Reviewed by Dean Jackson.


Source/WebCore:
This is imported from a patch Morten did for Blink, but I had to change it a fair
bit. deleteLines() is used to handle simple line box layout instead of just calling
deleteLineBoxTree.

I also had to disable the layout state to stop asserts on repaint when the children
get moved. Not sure why Blink didn't hit this, but it's simple enough to add a
LayoutStateDisabler to stop the assert.

Added fast/multicol/inline-children-crash.html

* rendering/RenderMultiColumnFlowThread.cpp:
(WebCore::RenderMultiColumnFlowThread::evacuateAndDestroy):

LayoutTests:
* fast/multicol/inline-children-crash-expected.txt: Added.
* fast/multicol/inline-children-crash.html: Added.



Canonical link: https://commits.webkit.org/150135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167718 268f45cc-cd09-0410-ab3c-d52691b4dbfc